# vet-core-package

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GITHUB_ACTIONS_ARTIFACT_UPGRADE.md  GITHUB_ACTIONS_SAFETY_FIX.md  LICENSE  POST_DEPLOYMENT_MONITORING_CHECKLIST.md  README.md  ROLLBACK_INSTRUCTIONS.md  SAFETY_AUTHENTICATION_SETUP.md  SECURITY_FIXES_SUMMARY.md  WORKFLOW_DOCUMENTATION_UPDATE.md  alembic.ini  bandit-report-fixed.json  comprehensive_workflow_validation.py  note_workflows.md  pyproject.toml  requirements.txt  safety-scan-report.json  test_code_quality_workflow_subtasks.py  test_docs_workflow_subtasks.py  test_enhanced_session.py  test_maintenance_workflow_subtasks.py  test_prerelease_workflow_subtasks.py  test_release_workflow_subtasks.py  test_session_simple.py  validate_ci_workflow.py  validate_code_quality_workflow.py  validate_docs_workflow.py  validate_docs_workflow_execution.py  validate_maintenance_workflow.py  validate_prerelease_workflow.py  validate_release_workflow.py  vet_clinic_platform.md  vet_clinic_tech_spec.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: generate_trend_analysis.py  process_vulnerabilities.py
.github/workflows/: ci.yml  code-quality.yml  docs.yml  maintenance.yml  pre-release.yml  release.yml  security-monitoring.yml  upgrade-validation.yml  version-bump.yml
.kiro/specs/vet-core-package/: design.md  requirements.md  tasks.md
.security/: development.yaml  production.yaml  staging.yaml
alembic/: README.md  env.py
alembic/versions/: .gitkeep  001_initial_migration_with_all_core_models.py
docs/: API_REFERENCE.md  CHANGELOG.md  EMERGENCY_RESPONSE_PROTOCOLS.md  ROLLBACK_PROCEDURES.md  SECURITY_DOCUMENTATION_INDEX.md  SECURITY_PROCESSES.md  SECURITY_RUNBOOKS.md  USAGE_GUIDE.md  conf.py  index.rst
examples/: advanced_patterns_example.py  basic_usage_example.py  exception_handling_example.py  session_management_example.py
scripts/: create_initial_migration.py  final_validation.py  integration_test.py  manage_security_config.py  migration_test.py  package_validation.py  security_monitoring.py  security_scan.py  upgrade_testing_pipeline.py  validate_migration.py  vulnerability_dashboard.py
src/vet_core/: __init__.py
src/vet_core/database/: __init__.py  connection.py  migrations.py  session.py  types.py
src/vet_core/exceptions/: __init__.py  core_exceptions.py
src/vet_core/models/: __init__.py  appointment.py  base.py  clinic.py  pet.py  user.py  veterinarian.py
src/vet_core/schemas/: __init__.py  appointment.py  clinic.py  pet.py  user.py  veterinarian.py
src/vet_core/security/: __init__.py  assessor.py  audit_trail.py  compliance.py  config.py  dashboard.py  error_analyzer.py  metrics_analyzer.py  models.py  notifications.py  performance_monitor.py  reporter.py  restore_strategies.py  scanner.py  status_tracker.py  subprocess_utils.py  upgrade_validator.py
src/vet_core/utils/: __init__.py  config.py  datetime_utils.py  validation.py
tests/: __init__.py  conftest.py  database_setup.py  test_appointment_model.py  test_audit_trail.py  test_base_model.py  test_clinic_model.py  test_compliance.py  test_compliance_integration.py  test_config.py  test_database_connection.py  test_database_session.py  test_environment_restoration_edge_cases.py  test_environment_restoration_fixed.py  test_environment_restorer.py  test_error_analyzer.py  test_exceptions.py  test_github_actions_integration.py  test_integration_vulnerability_workflow.py  test_pet_model.py  test_pet_schemas.py  test_restore_logger.py  test_restore_strategies.py  test_security_assessor.py  test_security_config.py  test_security_dashboard.py  test_security_metrics_analyzer.py  test_security_models.py  test_security_performance_monitor.py  test_security_scanner.py  test_security_status_tracker.py  test_session_management.py  test_upgrade_pipeline.py  test_upgrade_validator.py  test_user_model.py  test_user_schemas.py  test_utils.py  test_veterinarian_model.py
