[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vet-core"
version = "0.1.0"
description = "A foundational Python package providing shared data models, database utilities, and validation schemas for the veterinary clinic platform."
authors = [
    {name = "Vet Clinic Platform Team", email = "dev@vetclinic.com"}
]
maintainers = [
    {name = "Vet Clinic Platform Team", email = "dev@vetclinic.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["veterinary", "clinic", "database", "sqlalchemy", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.28.0",
    "pydantic>=2.5.0",
    "email-validator>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "PyYAML>=6.0.0",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
    "idna>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",        # Updated to avoid py library dependency
    "pytest-asyncio>=0.23.0",  # Compatible with pytest 8.x
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "bandit>=1.7.5",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
]

test = [
    "pytest>=8.0.0",        # Keep consistent with dev
    "pytest-asyncio>=0.23.0",  # Keep consistent with dev
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "faker>=19.0.0",
]

docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
]

security = [
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "semgrep>=1.45.0",
    "pip-audit>=2.6.0",     # Added for ongoing vulnerability scanning
]

[project.urls]
Homepage = "https://github.com/vet-clinic/vet-core-package"
Documentation = "https://vet-core.readthedocs.io/"
Repository = "https://github.com/vet-clinic/vet-core-package.git"
Issues = "https://github.com/vet-clinic/vet-core-package/issues"
Changelog = "https://github.com/vet-clinic/vet-core-package/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"